{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 173,
  "lineage": "c7dfd15b-58ef-2411-ca38-33d287dcc3cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:internet-gateway/igw-082a7c511d7ec86f3",
            "id": "igw-082a7c511d7ec86f3",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-082a7c511d7ec86f3",
            "id": "r-rtb-0321315e5f919a4e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0321315e5f919a4e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:route-table/rtb-0c46d075305eb356d",
            "id": "rtb-0c46d075305eb356d",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:route-table/rtb-0321315e5f919a4e9",
            "id": "rtb-0321315e5f919a4e9",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082a7c511d7ec86f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e46f08cfbb478fb",
            "route_table_id": "rtb-0321315e5f919a4e9",
            "subnet_id": "subnet-0948945f6140a6436"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4ae4536f5a5fabf",
            "route_table_id": "rtb-0321315e5f919a4e9",
            "subnet_id": "subnet-06a537e8815333fe1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00559236ce38282e2",
            "route_table_id": "rtb-0321315e5f919a4e9",
            "subnet_id": "subnet-0ebc9114c6eb6f424"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:security-group/sg-09343b49182f4aab0",
            "description": "Allow Vault accesss",
            "egress": [],
            "id": "sg-09343b49182f4aab0",
            "ingress": [],
            "name": "My extra security group",
            "name_prefix": "",
            "owner_id": "900131238574",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "extra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0cff8c4b7591bcedd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.192.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cff8c4b7591bcedd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0972f69f15a4542f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.193.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0972f69f15a4542f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0c75b74eb93bc3a2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.194.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c75b74eb93bc3a2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-03a737aff15384b16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a737aff15384b16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-080426625221e9fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080426625221e9fd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-084bac3715b389d25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084bac3715b389d25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0948945f6140a6436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0948945f6140a6436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-06a537e8815333fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a537e8815333fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0ebc9114c6eb6f424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebc9114c6eb6f424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "vpc_id": "vpc-0774cd032ab55325f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:vpc/vpc-0774cd032ab55325f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01103e5412429f9bd",
            "default_route_table_id": "rtb-087bb67e04d9c686a",
            "default_security_group_id": "sg-08f06300b8005bfca",
            "dhcp_options_id": "dopt-ea9e8e88",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0774cd032ab55325f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087bb67e04d9c686a",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-testing"
            }
          }
        }
      ]
    }
  ]
}